	- Add script 200-Powermate-ButtonTimeout for generating button
	  timeout events
		- New variable in GizmoDeviceStrings.py called
		  POWERMATE_BUTTON_TIMEOUT for this!
	- Add script 201-Powermate-Beryl
		- So far this detects a powermate button timeout and
		  unfolds the beryl cube, and lets you scroll the unfolded
		  cube with the dial

----------------------------------------
-- v 3.2
----------------------------------------
	- Updated the Python API so that scripts can just inherit
	  a desirable base class, and gain required functionality
	  ie, inherit from GizmoScriptApplicationRunning if the
	  device application mapping should be used when a specific
	  app has foreground focus
	- Fix potential crash bugs in network object deserialization
	  code.
	- Fix potential infinite loop in X11FocusWatcher on shutdown
	- Add 64 bit patch from ubuntu package team
	- Add setInputFocus method for raising windows by window title
	  from the Python scripts
	- Add copyright disclaimers to all of the scripts as per
	  ubuntu package maintainer requests

----------------------------------------
-- v 3.1
----------------------------------------
May 17 2007
	- Add new Visualization API
	- Add keyboard LED visualizations
	- Add keyboard LED command line switch (--keyboard-leds)
	- Fix segfault when shutting down gizmod, and clients 
	  are connected and sending messages
	- Add HUP script reloading (mostly works, but needs more
	  upstream support from boost.python for Py_Finalize)
	- Remote control mode (--remote-control)
	- Fix the configure script so that it doesn't need
	  slocate!
	- PowerMate LED events only get send across USB bus
	  if absolutely necessary

----------------------------------------
-- v 3.0
----------------------------------------
May 09 2007
        - 3.0 Completed!!    

----------------------------------------
-- v 2.9.0
----------------------------------------
Mar 28 2007
	- Work begins on 3.0!

----------------------------------------
-- v 2.3