@@ -15,6 +15,8 @@
 		- So far this detects a powermate button timeout and
 		  unfolds the beryl cube, and lets you scroll the unfolded
 		  cube with the dial
+	- Add base script GizmoScriptAltTabber so that devices have an 
+	  easy way of sending Alt-Tab events
 
 ----------------------------------------
 -- v 3.2
